# btp-seller

./: CLAUDE.md  README.md  celeryconfig.py  dump.rdb  pyproject.toml  requirements.txt  visualize_results.py
.github/workflows/: ci.yml
configs/: example.json  paper_kdd2023_defaults.json  regulation_example.json  slot_ctr_curves_and_reserve.json
docs/: ARCHITECTURE-CHOICES.md  PlanningExecution.md  SIMULATION-PLATFORM.md
docs/h12026/: readme.md
runs/1762390038/: metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1762588462/: metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1768370395/: metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1768380158/: metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1770107492/: metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1770108127/: metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1770108384/: metrics.csv  sellers.parquet
runs/1770108551/: sellers.csv
runs/1770108682/: metrics.parquet
runs/1770124697/: history.csv  metrics.csv  sellers.csv
runs/1770125214/: history.csv  metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1770125623/: history.csv  metrics.parquet  sellers.parquet
runs/1770126124/: metrics.csv  sellers.csv
runs/1770126589/: history.csv  metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
runs/1770127146/: history.csv  metrics.csv  metrics.parquet  sellers.csv  sellers.parquet
src/auction_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
tests/: test_imports.py
(+18 files in other folders)
